update score header

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #1B244A;
+    background-color: #1f6051;
     /* Dark blue background from image */
     font-family: 'Verdana', sans-serif;
     display: flex;
